[project]
name = "llm-ollama"
version = "0.1.0"
description = ""
authors = [
    {name = "alok-raj",email = "Alok.Raj@mindfiresolutions.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "ollama (>=0.6.0,<0.7.0)",
    "langchain (>=1.0.2,<2.0.0)",
    "langgraph (>=1.0.1,<2.0.0)",
    "langsmith (>=0.4.38,<0.5.0)",
    "openai (>=2.6.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
