[project]
name = "llm-ollama"
version = "0.1.0"
description = ""
authors = [
    {name = "alok-raj",email = "Alok.Raj@mindfiresolutions.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "ollama (>=0.6.0,<0.7.0)",
    "langchain (>=1.0.2,<2.0.0)",
    "langgraph (>=1.0.1,<2.0.0)",
    "langsmith (>=0.4.38,<0.5.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "llama-index (>=0.14.6,<0.15.0)",
    "llama-index-core (>=0.14.6,<0.15.0)",
    "chromadb (>=1.3.0,<2.0.0)",
    "llama-index-vector-stores-chroma (>=0.5.3,<0.6.0)",
    "llama-index-embeddings-ollama (>=0.8.3,<0.9.0)",
    "llama-index-llms-ollama (>=0.9.0,<0.10.0)",
    "groq (>=0.33.0,<0.34.0)",
    "llama-index-embeddings-huggingface (>=0.6.1,<0.7.0)",
    "sentence-transformers (>=5.1.2,<6.0.0)",
    "llama-index-llms-groq (>=0.4.1,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
